[gd_scene load_steps=3 format=3 uid="uid://dp3f5ukjuc6go"]

[ext_resource type="Script" path="res://Scripits/enemy_spawner.gd" id="1_byfrc"]
[ext_resource type="Script" path="res://Scripits/spawner_check.gd" id="2_kfwt6"]

[node name="EnemySpawner" type="Node"]
script = ExtResource("1_byfrc")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="VisibleOnScreenNotifier2D2" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="VisibleOnScreenNotifier2D3" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="VisibleOnScreenNotifier2D4" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="VisibleOnScreenNotifier2D5" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="VisibleOnScreenNotifier2D6" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="VisibleOnScreenNotifier2D7" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="VisibleOnScreenNotifier2D8" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="VisibleOnScreenNotifier2D9" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(185, 39)
script = ExtResource("2_kfwt6")

[node name="EnemyContainer" type="Node" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="VisibleOnScreenNotifier2D" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="VisibleOnScreenNotifier2D" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D2" to="VisibleOnScreenNotifier2D2" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D2" to="VisibleOnScreenNotifier2D2" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D2" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D3" to="VisibleOnScreenNotifier2D3" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D3" to="VisibleOnScreenNotifier2D3" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D3" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D4" to="VisibleOnScreenNotifier2D4" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D4" to="VisibleOnScreenNotifier2D4" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D4" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D5" to="VisibleOnScreenNotifier2D5" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D5" to="VisibleOnScreenNotifier2D5" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D5" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D6" to="VisibleOnScreenNotifier2D6" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D6" to="VisibleOnScreenNotifier2D6" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D6" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D7" to="VisibleOnScreenNotifier2D7" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D7" to="VisibleOnScreenNotifier2D7" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D7" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D8" to="VisibleOnScreenNotifier2D8" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D8" to="VisibleOnScreenNotifier2D8" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D8" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D9" to="VisibleOnScreenNotifier2D9" method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D9" to="VisibleOnScreenNotifier2D9" method="_on_screen_exited"]
[connection signal="state_changed" from="VisibleOnScreenNotifier2D9" to="." method="_on_visible_on_screen_notifier_2d_state_changed"]
